fix: artists indiv page vw going past body fixed with overflow hidden and 100vw width on section container (about the artist)

--- a/artists/artistsindividual.css
+++ b/artists/artistsindividual.css
@@ -10,8 +10,8 @@
 }
 #max-width-exception {max-width: 100vw;}
 
-html,body {margin: 0; width: 100%; background-color:#12171d;/*oldcolorwas12161c*/}
-html {height: fit-content; width: 100vw;}
+html,body {margin: 0; width: 100vw; background-color:#12171d;/*oldcolorwas12161c*/}
+html {height: fit-content;}
 
 body {
   min-height: 100%; /*FIX FOUND - this fixed the repeat img only showing for part of the page, as the body was only reaching the viewport's pixel height when body was set to height: 100%; solution was to keep html as that setting, but set body to min-height 100% instead of definitive height to 100%*/
@@ -204,7 +204,7 @@ nav {
                             
 header {
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: 2.5rem;
   align-items: center;
   justify-content: start;
@@ -228,7 +228,7 @@ header {
 
 /*LOADSCREEN*/
       #loadcontainer{
-        width: 100%;
+        width: 100vw;
         overflow-y: hidden;
         position: absolute;
         top: 0;
@@ -262,7 +262,7 @@ header {
         height: 255px;
     }
     #loadscreen-notfirst{
-        animation: scrolldown 1s linear 1;
+        animation: scrolldown 2s linear 1;
         animation-play-state: running;
         animation-iteration-count: 1;
         animation-fill-mode: both;
@@ -419,15 +419,15 @@ section {width: 100%; height:fit-content; z-index: 1;}
       #text-p-long2 {text-align: left; width: 90vw; margin-bottom: 1rem;}
       .expand-arrow-down {display: none; visibility: hidden;}
 
-      #section-container {width: 100%; display: flex; justify-content: center;}
-
+      #section-container {width: 100vw; overflow: hidden; display: flex; justify-content: center; height: fit-content;}
+/*FIX: (implemented) overflow hidden value added to section container as this section was causing the vw to be expanded past the body */
 @media screen and (min-width: 1001px){
   #container-container2 {position: relative; left: 2vw;}
 }
  @media screen and (max-width: 1000px){
       #container-container2 {position: relative; justify-content: center; margin-bottom: 4rem;}
         #container-text2 {
-          width: 20rem; height:20rem; position: absolute; z-index: 10;
+          width: 20rem; height:17rem; position: absolute; z-index: 10;
           display: flex; flex-direction: column; align-items: center; justify-content: space-between;
             padding: .75rem; border-radius: 1rem;
           cursor: pointer;
